--- a/app/src/main/res/layout/activity_pie_chart_view.xml
+++ b/app/src/main/res/layout/activity_pie_chart_view.xml
@@ -11,7 +11,7 @@
     <com.adsuper.io.customview.bingzhuangtu.PieChartView
         android:id="@+id/piechart_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
